# open-muvr

aa/: CMakeLists.txt
aa/core/: CMakeLists.txt
aa/core/main/: CMakeLists.txt  aa.cc  aa.h
aa/core/test/: CMakeLists.txt  aatest.cc
ios/Lift/: ExerciseSession.swift  ExerciseSessionManager.swift  HomeController.swift  LiveSession.storyboard  LiveSessionClassificationController.swift  NewSessionController.swift
ios/Lift.xcodeproj/: project.pbxproj
ios/Lift/Device/: SensorData.swift
ios/Lift/LiftServer/: ClassificationExamplesCache.swift  ExerciseModel+Marshalling.swift  ExerciseModel.swift  LiftServer.swift  LiftServerCache.swift  LiftServerURLs.swift
ios/Lift/Predef/: Array.swift  Dictionary.swift  Result.swift
ios/LiftTests/Device/: SensorDataArrayTests.swift  SensorDataGroupTests.swift
pebble/: CMakeLists.txt
pebble/core/main/: am.c  gfs.c  gfs.h
server/: Vagrantfile  build.sbt  fig.yml  start-cluster.sh
server/debs/: cvc4_1.3.1~20140805-1_amd64.deb  libcvc4-3_1.3.1~20140805-1_amd64.deb  libcvc4bindings-java3_1.3.1~20140805-1_amd64.deb  libcvc4parser3_1.3.1~20140805-1_amd64.deb
server/exercise/: build.sbt
server/exercise/debs/: cvc4-doc_1.3.1~20140805-1_all.deb
server/exercise/src/main/R/: classification.R  enrichData.R
server/main/: build.sbt
server/main/src/main/resources/: main.conf  production.conf
server/project/: BaseSettings.scala  Dependencies.scala
server/provisioning/docker/spark-base/: Dockerfile
server/provisioning/docker/spark-singlenode/: Dockerfile
server/serialization/: build.sbt
server/spark/: build.sbt
(+75 files in other folders)
